--- a/src/components/Styles/Projects.scss
+++ b/src/components/Styles/Projects.scss
@@ -14,11 +14,15 @@ body {
 }
 
 .project-card {
-    min-width: 100vw;
-    
+    padding: 5px;
+    margin: 10px;
+    background-color: #333;
+    border-radius: 10px;
+    max-width: 100vw;
 }
 
 img{
     width: 50%;
     height: auto;
+    
 }
