--- a/src/components/Styles/Projects.scss
+++ b/src/components/Styles/Projects.scss
@@ -8,15 +8,19 @@ body {
     font-family: 'Abyssinica SIL', serif;
 }
 
+h1{
+    padding-left: 1rem;
+}
 .link {
-    color: aliceblue;
+    color: #333;
     text-decoration-style: none;
 }
 
 .project-card {
     padding: 5px;
     margin: 10px;
-    background-color: #333;
+    background-color: #fff;
+    color: #333;
     border-radius: 10px;
     max-width: 100vw;
 }
